InduFixDemo/force-app/main/default/objects/Case/fields/Resolution_Time__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Time__c</fullName>
    <formula>TEXT(FLOOR(IF(ISBLANK(ClosedDate), NOW(), ClosedDate) - CreatedDate)) &amp; &quot; Days &quot; &amp;
TEXT(FLOOR(MOD((IF(ISBLANK(ClosedDate), NOW(), ClosedDate) - CreatedDate) * 24, 24))) &amp; &quot; Hours &quot; &amp;
TEXT(FLOOR(MOD((IF(ISBLANK(ClosedDate), NOW(), ClosedDate) - CreatedDate) * 1440, 60))) &amp; &quot; Minutes&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resolution Time</label>
    <type>Text</type>
</CustomField>