InduFixDemo/force-app/main/default/objects/Case/fields/Resolution_Time_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Time_Hrs__c</fullName>
    <description>Case resolution time calculation</description>
    <formula>IF(ISBLANK(ClosedDate), (NOW() - CreatedDate) * 24, (ClosedDate - CreatedDate) * 24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resolution Time (Hrs)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>