InduFixDemo/force-app/main/default/objects/Case/listViews/Basic_Support_Case.listView-meta.xml
<ListView>
    <fullName>Basic_Support_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Basic Support</label>
    <queue>Basic_Support</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>