InduFixDemo/force-app/main/default/objects/Case/listViews/Equipment_Low_Priroity_Urgency_Case.listView-meta.xml
<ListView>
    <fullName>Equipment_Low_Priroity_Urgency_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Equipment - Low Priroity/Urgency</label>
    <queue>Equipment_Low_Priroity_Urgency</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>