InduFixDemo/force-app/main/default/objects/Case/listViews/Premium_Plus_Escalated_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Premium_Plus_Escalated_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Premium Plus Support Escalated Queue</label>
    <queue>Premium_Plus_Support_Escalated_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>