InduFixDemo/force-app/main/default/objects/Case/listViews/Premium_Support_Case.listView-meta.xml
<ListView>
    <fullName>Premium_Support_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Premium Support</label>
    <queue>Premium_Support</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>