InduFixDemo/force-app/main/default/objects/Case/listViews/Standard_Support_Escalated_Case.listView-meta.xml
<ListView>
    <fullName>Standard_Support_Escalated_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Standard Support Escalated</label>
    <queue>Standard_Support_Escalated</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>