InduFixDemo/force-app/main/default/objects/Case/listViews/Support_Request_High_Priority_Urgency_Case.listView-meta.xml
<ListView>
    <fullName>Support_Request_High_Priority_Urgency_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Support Request- High Priority/Urgency</label>
    <queue>Support_Request_High_Priority_Urgency</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>